--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script src="JS_Objects_and_functions_learning.js"></script>
-<h1>error 404</h1>	
+<h1>Learning JS</h1>	
 </body>
 <script>
-	console.log('From script');
+	//console.log('From script');
 </script>
 </html>
